--- a/styles/styles.css
+++ b/styles/styles.css
@@ -912,7 +912,7 @@ body {
   outline: none;
 }
 
-.reduce-guest-number-button:focus .minus-svg path {
+.reduce-guest-number-button:focus path {
   fill: #000000;
   fill-opacity: 1;
 }
@@ -929,7 +929,7 @@ body {
   outline: none;
 }
 
-.reduce-guest-number-button:hover .minus-svg path {
+.reduce-guest-number-button:hover path {
   fill: #000000;
   fill-opacity: 1;
 }
@@ -938,7 +938,7 @@ body {
   background-color: #f2f2f2;
 }
 
-.reduce-guest-number-button:active .minus-svg path {
+.reduce-guest-number-button:active path {
   fill: #000000;
   fill-opacity: 0.2;
 }
@@ -960,7 +960,7 @@ body {
   outline: none;
 }
 
-.increase-guest-number-button:focus .plus-svg path {
+.increase-guest-number-button:focus path {
   fill: #000000;
   fill-opacity: 1;
 }
@@ -977,7 +977,7 @@ body {
   outline: none;
 }
 
-.increase-guest-number-button:hover .plus-svg path {
+.increase-guest-number-button:hover path {
   fill: #000000;
   fill-opacity: 1;
 }
@@ -986,7 +986,7 @@ body {
   background-color: #f2f2f2;
 }
 
-.increase-guest-number-button:active .plus-svg path {
+.increase-guest-number-button:active path {
   fill: #000000;
   fill-opacity: 0.2;
 }
